--- a/app/src/main/res/layout/mypage_activity_refund_exchange_list.xml
+++ b/app/src/main/res/layout/mypage_activity_refund_exchange_list.xml
@@ -7,19 +7,6 @@
     android:clipToOutline="true"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="411dp"
-        android:layout_height="845dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/mypage_refund_exchange_list"
-        android:alpha="0.3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
-
     <Button
         android:id="@+id/btn_back"
         android:layout_width="26dp"
@@ -60,4 +47,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/refund_exchange_recyclerView"
+        android:layout_width="390dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header_title" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
