--- a/app/src/main/res/layout/mypage_activity_user_info_change.xml
+++ b/app/src/main/res/layout/mypage_activity_user_info_change.xml
@@ -96,6 +96,7 @@
         app:layout_constraintStart_toEndOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/user_info_change" />
 
+
     <Button
         android:id="@+id/btn_name_change"
         android:layout_width="60dp"
@@ -108,12 +109,13 @@
         android:text="변경"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.704"
         app:layout_constraintStart_toEndOf="@+id/editTextName"
         app:layout_constraintTop_toBottomOf="@+id/user_info_change"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />
-
-
 
     <TextView
         android:id="@+id/userNickname"
@@ -150,9 +152,9 @@
         android:id="@+id/btn_user_nickname_change"
         android:layout_width="60dp"
         android:layout_height="40dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="24dp"
-        android:layout_gravity="center"
         android:background="@color/main"
         android:text="변경"
         android:textColor="@color/white"
