--- a/app/src/main/res/layout/product_inquiry_page.xml
+++ b/app/src/main/res/layout/product_inquiry_page.xml
@@ -40,6 +40,56 @@
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 
+    <Button
+        android:id="@+id/home_btn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="289dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="11dp"
+        android:background="@drawable/detailpage_home_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/search_btn"
+        android:layout_width="28dp"
+        android:layout_height="23dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="327dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="14dp"
+        android:background="@drawable/detailpage_search_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/bag_btn"
+        android:layout_width="22dp"
+        android:layout_height="32dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="365dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="9dp"
+        android:background="@drawable/detailpage_bag_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <TextView
         android:id="@+id/tv_Product_inquiry"
         android:layout_width="127dp"
@@ -57,57 +107,8 @@
         app:layout_constraintVertical_bias="0.013"
         tools:ignore="MissingConstraints" />
 
-    <View
-        android:id="@+id/home_btn"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="289dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginBottom="11dp"
-        android:background="@drawable/detailpage_home_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
 
-
-    <View
-        android:id="@+id/search_btn"
-        android:layout_width="28dp"
-        android:layout_height="23dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="327dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginBottom="14dp"
-        android:background="@drawable/detailpage_search_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/bag_btn"
-        android:layout_width="22dp"
-        android:layout_height="32dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="365dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="9dp"
-        android:background="@drawable/detailpage_bag_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/top_toorbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/top_toorbar"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.widget.Button
+    <Button
         android:id="@+id/btn_enroll"
         android:layout_width="207dp"
         android:layout_height="60dp"
@@ -115,7 +116,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="172dp"
         android:background="@drawable/login_button"
-        android:text="취소"
+        android:text="등록"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -127,15 +128,15 @@
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
-    <android.widget.Button
-        android:id="@+id/btn_Cancellation"
+    <Button
+        android:id="@+id/btn_cancellation"
         android:layout_width="207dp"
         android:layout_height="60dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="172dp"
         android:background="@drawable/login_button"
-        android:text="등록"
+        android:text="취소"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -185,7 +186,7 @@
                 android:id="@+id/view21"
                 android:layout_width="match_parent"
                 android:layout_height="474dp"
-                android:layout_above="@+id/et_Product_inquiry_title"
+                android:layout_above="@+id/editTextSubject"
                 android:layout_below="@+id/view15"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="158dp"
@@ -238,81 +239,74 @@
 
             <TextView
                 android:id="@+id/textView16"
-                android:layout_width="136dp"
-                android:layout_height="21dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/view15"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="314dp"
+                android:layout_marginTop="320dp"
                 android:layout_marginEnd="266dp"
                 android:layout_marginBottom="-187dp"
                 android:text="문의 상세 내용" />
 
-            <RadioButton
-                android:id="@+id/radioButton"
-                android:layout_width="165dp"
-                android:layout_height="37dp"
-                android:layout_alignTop="@+id/view20"
-                android:layout_alignBottom="@+id/view20"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="29dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="216dp"
-                android:layout_marginBottom="62dp"
-                android:text="사이즈"
-                tools:ignore="TouchTargetSizeCheck" />
 
-            <RadioButton
-                android:id="@+id/radioButton4"
-                android:layout_width="165dp"
-                android:layout_height="37dp"
-                android:layout_alignTop="@+id/view20"
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
                 android:layout_alignBottom="@+id/view20"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="89dp"
-                android:layout_marginEnd="217dp"
-                android:layout_marginBottom="13dp"
-                android:text="배송"
-                tools:ignore="TouchTargetSizeCheck" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <RadioButton
-                android:id="@+id/radioButton5"
-                android:layout_width="165dp"
-                android:layout_height="37dp"
-                android:layout_alignTop="@+id/view20"
-                android:layout_alignBottom="@+id/view20"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="219dp"
-                android:layout_marginTop="91dp"
-                android:layout_marginEnd="26dp"
-                android:layout_marginBottom="11dp"
-                android:text="재입고"
-                tools:ignore="TouchTargetSizeCheck" />
+                <GridLayout
+                    android:id="@+id/gridLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="40dp"
+                    android:columnCount="2"
+                    android:rowCount="2"
+                    android:layout_alignBottom="@+id/view20"
+                    app:layout_constraintTop_toBottomOf="@+id/view20"
+                    app:layout_constraintBottom_toTopOf="@+id/editTextSubject"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-            <RadioButton
-                android:id="@+id/radioButton3"
-                android:layout_width="165dp"
-                android:layout_height="37dp"
-                android:layout_alignTop="@+id/view20"
-                android:layout_alignBottom="@+id/view20"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="220dp"
-                android:layout_marginTop="42dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginBottom="60dp"
-                android:text="상세문의"
-                tools:ignore="TouchTargetSizeCheck" />
+                <RadioButton
+                    android:id="@+id/radioButtonSize"
+                    android:layout_width="165dp"
+                    android:layout_height="37dp"
+                    android:layout_gravity="center"
+                    android:text="사이즈"
+                    tools:ignore="TouchTargetSizeCheck" />
 
+                <RadioButton
+                    android:id="@+id/radioButtonDelivery"
+                    android:layout_width="165dp"
+                    android:layout_height="37dp"
+                    android:text="배송"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                    <RadioButton
+                        android:id="@+id/radioButtonDetail"
+                        android:layout_width="165dp"
+                        android:layout_height="37dp"
+                        android:text="상세문의"
+                        tools:ignore="TouchTargetSizeCheck" />
+
+                    <RadioButton
+                        android:id="@+id/radioButtonRestock"
+                        android:layout_width="165dp"
+                        android:layout_height="37dp"
+                        android:text="재입고"
+                        tools:ignore="TouchTargetSizeCheck" />
+                </GridLayout>
+
+            </RadioGroup>
 
             <EditText
-                android:id="@+id/et_Product_inquiry_title"
+                android:id="@+id/editTextSubject"
                 android:layout_width="wrap_content"
                 android:layout_height="43dp"
                 android:layout_below="@+id/view20"
@@ -326,6 +320,7 @@
                 android:background="#D9D9D9"
                 android:ems="10"
                 android:hint=" 제목: 15자 이내 입력"
+                android:paddingLeft="8dp"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -336,11 +331,11 @@
                 tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
 
             <EditText
-                android:id="@+id/editTextTextMultiLine"
+                android:id="@+id/editTextContent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/et_Product_inquiry_title"
-                android:layout_alignBottom="@+id/et_Product_inquiry_title"
+                android:layout_alignTop="@+id/editTextSubject"
+                android:layout_alignBottom="@+id/editTextSubject"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="9dp"
@@ -351,7 +346,9 @@
                 android:ems="10"
                 android:gravity="start|top"
                 android:hint=" 상세 문의 내용 입력"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:paddingLeft="6dp"
+                android:paddingTop="10dp" />
 
 
         </RelativeLayout>
