--- a/app/src/main/res/layout/mypage_item_order_unreviewed.xml
+++ b/app/src/main/res/layout/mypage_item_order_unreviewed.xml
@@ -53,15 +53,15 @@ android:padding="16dp">
 
     <ImageView
         android:id="@+id/productImage"
-        android:layout_width="80dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/mypage_clothes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/category_light_gray_color"
+        android:contentDescription="My Button Description"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/order_date" />
-
+        app:layout_constraintTop_toBottomOf="@+id/order_date"
+        app:layout_constraintVertical_bias="0.0" />
     <TextView
         android:id="@+id/order_brandName"
         android:layout_width="wrap_content"
