--- a/app/src/main/res/layout/seller_activity_order_delivery_list.xml
+++ b/app/src/main/res/layout/seller_activity_order_delivery_list.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="26dp"
-        android:text="주문/배송 내역"
+        android:text="주문 물품 내역"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
