--- a/app/src/main/res/layout/mypage_activity_exchange_finished_list.xml
+++ b/app/src/main/res/layout/mypage_activity_exchange_finished_list.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="26dp"
-        android:text="환불/교환"
+        android:text="교환 목록"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -35,33 +35,30 @@
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/btn_refund_list"
+        android:id="@+id/btn_exchange_waiting_list"
         android:layout_width="205dp"
         android:layout_height="44dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/mypage_btn_bottom_border_unclicked"
-        android:text="환불"
-        android:textSize="20sp"
         android:paddingBottom="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:text="교환 대기"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btn_exchange_list"
+        android:id="@+id/btn_exchange_finished_list"
         android:layout_width="205dp"
         android:layout_height="44dp"
-        android:layout_marginLeft="180dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/mypage_btn_bottom_border_clicked"
         android:paddingBottom="10dp"
-        android:text="교환"
+        android:text="교환 완료"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_exchange_waiting_list"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
