--- a/app/src/main/res/layout/mypage_activity_main.xml
+++ b/app/src/main/res/layout/mypage_activity_main.xml
@@ -86,7 +86,7 @@
         android:gravity="left"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:text="주문/배송 내역"
+        android:text="주문 내역 조회"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -95,7 +95,7 @@
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btn_refund_exchange_list"
+        android:id="@+id/btn_exchange_list"
         android:layout_width="411dp"
         android:layout_height="70dp"
         android:layout_marginTop="5dp"
@@ -103,12 +103,29 @@
         android:gravity="left"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:text="환불/교환 내역"
+        android:text="교환 내역"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_order_delivery_list"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/btn_refund_list"
+        android:layout_width="411dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:background="#00FF0000"
+        android:gravity="left"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:text="환불 내역"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_exchange_list"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <Button
@@ -125,7 +142,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
+        app:layout_constraintTop_toBottomOf="@+id/btn_refund_list"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <Button
